# wo-sind-briefkaesten

./: .gitignore  README.md  app.py  architecture.puml  grid_output.gpkg  grid_output.gpkg-shm  grid_output.gpkg-wal  madd_extract.py  overture.py  pyproject.toml  requirements.txt  streamlit_app.py  trans.py  update.txt  wake_up_streamlit.py
.github/workflows/: keepalive.yml  release.yml  weekly_commit.yml
