[project]
name = "wo-sind-briefkaesten"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.34",
    "bs4>=0.0.2",
    "duckdb>=1.1.3",
    "folium>=0.19.4",
    "geopandas>=1.0.1",
    "shapely>=2.0.6",
    "streamlit>=1.41.1",
    "streamlit-folium>=0.24.0",
]
